--- a/Medicine_scraping.ipynb
+++ b/Medicine_scraping.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
-    "import pandas as pd\n",
-    "import string"
+    "import pandas as pd\n"
    ]
   },
   {
